--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e2a7a3">  <td>19/03/16 22:48:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchBrowser.launch()[pri:0, instance:pack4.LaunchBrowser@1ca3b418]">launch</td> 
-  <td>main@1231799381</td>   <td></td> </tr>
-<tr bgcolor="dba097">  <td>19/03/16 22:48:47</td>   <td>-9254</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.testBaseBefore(org.testng.ITestContext)[pri:0, instance:pack4.LaunchBrowser@1ca3b418]">&gt;&gt;testBaseBefore</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1231799381</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>19/03/27 23:21:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login(java.lang.String, java.lang.String)[pri:0, instance:com.gs.selenium.testcases.LoginTest@1349883]">login</td> 
+  <td>main@2061543916</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>19/03/27 23:21:22</td>   <td>22493</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.gs.selenium.testcases.LoginTest@1349883]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2061543916</td>   <td></td> </tr>
 </table>
